--- a/front/package.json
+++ b/front/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.12",
+    "@angular/cdk": "^11.2.12",
     "@angular/common": "~11.2.12",
     "@angular/compiler": "~11.2.12",
     "@angular/core": "~11.2.12",
     "@angular/forms": "~11.2.12",
+    "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
@@ -32,6 +34,7 @@
     "@angular-eslint/template-parser": "4.2.0",
     "@angular/cli": "~11.2.11",
     "@angular/compiler-cli": "~11.2.12",
+    "@types/geojson": "^7946.0.7",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
