--- a/nginx.conf
+++ b/nginx.conf
@@ -9,5 +9,6 @@ http {
         location / {
             try_files $uri $uri/ /index.html;
         }
+        add_header 'Access-Control-Allow-Origin' '*';
     }
 }
