--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -2,20 +2,20 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
-EXPOSE 80
+EXPOSE 4000
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["KarenSparckJones/KarenSparckJones.csproj", "KarenSparckJones/"]
-RUN dotnet restore "KarenSparckJones/KarenSparckJones.csproj"
+COPY ["KarenSparckJones/WebApi.csproj", "KarenSparckJones/"]
+RUN dotnet restore "KarenSparckJones/WebApi.csproj"
 COPY . .
 WORKDIR "/src/KarenSparckJones"
-RUN dotnet build "KarenSparckJones.csproj" -c Release -o /app/build
+RUN dotnet build "WebApi.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "KarenSparckJones.csproj" -c Release -o /app/publish
+RUN dotnet publish "WebApi.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "KarenSparckJones.dll"]
+ENTRYPOINT ["dotnet", "WebApi.dll"]
