--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,16 +31,18 @@ services:
     labels:
       - "traefik.enable=false"
 
-#   api:
-#     build: "services/api/."
-#     restart: "unless-stopped"
-#     labels:
-#       # the most import label to tell traefik that it should pick up this service
-#       - "traefik.enable=true"
-#       - "traefik.http.routers.api.rule=Host(`api.traefik.me`)"
-#       - "traefik.http.routers.api-tls.tls.domains[0].main=api.traefik.me"
-#       - "traefik.http.routers.api-tls.tls.domains[0].sans=api-*.traefik.me"
-#       - "traefik.http.services.api.loadbalancer.server.port=8080"
+  back:
+    build:
+      context: "back/."
+      dockerfile: "Dockerfile"
+    restart: "unless-stopped"
+    labels:
+      # the most import label to tell traefik that it should pick up this service
+      - "traefik.enable=true"
+      - "traefik.http.routers.back.rule=Host(`back.traefik.me`)"
+      - "traefik.http.routers.back-tls.tls.domains[0].main=back.traefik.me"
+      - "traefik.http.routers.back-tls.tls.domains[0].sans=back-*.traefik.me"
+      - "traefik.http.services.back.loadbalancer.server.port=80"
 
   front:
     build: 
@@ -54,6 +56,7 @@ services:
       - "traefik.http.routers.front-tls.tls.domains[0].main=front.traefik.me"
       - "traefik.http.routers.front-tls.tls.domains[0].sans=front-*.traefik.me"
       - "traefik.http.services.front.loadbalancer.server.port=3000"
+      - "traefik.http.middlewares.secHeaders.headers.accesscontrolallowheaders=*"
 
   reverse-proxy-https-helper-dev:
     image: alpine:3.9.2
