--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
+    "@types/mapbox-gl": "^2.1.2",
+    "mapbox-gl": "^2.2.0",
+    "ngx-mapbox-gl": "^6.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -36,6 +39,7 @@
     "@angular/compiler-cli": "~11.2.12",
     "@types/geojson": "^7946.0.7",
     "@types/jasmine": "~3.6.0",
+    "@types/mapbox__mapbox-gl-geocoder": "^4.7.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
