fix API/back call

--- a/back/KarenSparckJones/appsettings.json
+++ b/back/KarenSparckJones/appsettings.json
@@ -8,10 +8,10 @@
   },
   "AllowedHosts": "*",
   "MongoDBConfig": {
-    "connectionString": "mongodb://user1:user1@localhost:27017/KarenSparckJones",
+    "connectionString": "mongodb://user1:user1@mongodb/KSJ",
     "user": "user1",
     "password": "user1",
     "useSSL": "false",
-    "databaseName": "KarenSparckJones"
+    "databaseName": "KSJ"
   }
 }
