--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -16,6 +16,7 @@ FROM build AS publish
 RUN dotnet publish "WebApi.csproj" -c Release -o /app/publish
 
 FROM base AS final
+ENV ASPNETCORE_URLS "http://+:4000"
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "WebApi.dll"]
