--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
+    "@ngrx/effects": "^11.1.1",
+    "@ngrx/store": "^11.1.1",
+    "@ngrx/store-devtools": "^11.1.1",
     "@types/mapbox-gl": "^2.1.2",
     "mapbox-gl": "^2.2.0",
     "ngx-mapbox-gl": "^6.0.4",
